2008-07-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclDictObj.c (SetDictFromAny): Make the list->dict
	transformation a bit more efficient; modern dicts are ordered and so
	we can round-trip through lists without needing the string rep at all.
	* generic/tclListObj.c (SetListFromAny): Make the dict->list
	transformation not lossy of internal representations and hence more
	efficient. [Bug 2008248] (ajpasadyn) but using a more efficient patch.

2008-07-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/DictObj.3: Fix error in example. [Bug 2016740]

2008-07-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclGet.c:	Corrected out of date comments.

2008-07-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (InfoFrameCmd): Fixed unsafe idiom of setting
	the interp result found by Don Porter.

2008-07-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/regexp.n, doc/regsub.n: Correct examples. [Bug 1982642]

2008-07-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/tclEncoding.c(UtfToUtfProc): Avoid unwanted sign extension
	when converting incomplete UTF-8 sequences. See [Bug 1908443] for
	details.

2008-07-03  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c (InvokeTclMethod): Fixed the memory leak
	  reported in [Bug 1987821]. Thanks to Miguel for the rpeort and
	  Don Porter for tracking the cause down.

2008-07-03  Don Porter  <dgp@users.sourceforge.net>

	* library/package.tcl:  Removed [file readable] testing from
	[tclPkgUnknown] and friends.  We find out soon enough whether a
	file is readable when we try to [source] it, and not testing
	before allows us to workaround the bugs on some common filesystems
	where [file readable] lies to us.  [Patch 1969717]

2008-06-29  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.3 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.3 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec: